--- a/vue-senate-data.html
+++ b/vue-senate-data.html
@@ -148,7 +148,7 @@
 	<!--//<script src="Untitled-2.js"></script>-->
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 	<!--	<script src="js_json/v_senator.js"></script>-->
-	<script src="vue_senate.js"></script>
+	<script src="js_json/vue_senate.js"></script>
 </body>
 
 </html>
