--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		<div class="row mt-3">
 			<div class="col">
-				<nav class="navbar navbar-expand-lg navbar-dark bg-secondary rounded-top">
+				<nav class="navbar navbar-expand-lg navbar-dark bg-secondary rounded-0">
 					<a class="navbar-brand" href="index.html">TGIF</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
