--- a/vue_senate_attendance.html
+++ b/vue_senate_attendance.html
@@ -192,7 +192,7 @@
 
 
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-	<script src="vue_senate.js"></script>
+	<script src="js_json/vue_senate.js"></script>
 
 </body>
 
