--- a/vue-house-data.html
+++ b/vue-house-data.html
@@ -87,7 +87,7 @@
 		</div>
 
 
-		<div id="filterTable">
+		<div id="filterTheTable">
 			<form id="checkBox" action="">
 
 				<label id="">Filter by Party: </label>
@@ -135,11 +135,12 @@
 				<button class="btn btn-dark mt-3" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
 					Back to top
 				</button>
+				</div>
 			</div>
 			<div class="card-footer text-center mt-3 mb-3 bg-secondary text-white rounded-0 ">
 				&copy;2016 TGIF | All Rights reserved
 			</div>
-		</div>
+		
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -147,7 +148,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-	<script src="vue_house.js"></script>
+	<script src="js_json/vue_house.js"></script>
 </body>
 
 </html>
