--- a/vue_house_attendance.html
+++ b/vue_house_attendance.html
@@ -83,7 +83,7 @@
 
 				<p>The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for the most formal matters, as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device. In the case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the tiebreaking vote.</p>
 			</div>
-			<div id="filterTable">
+			<div id="filterTheTable">
 				<div class="col-6">
 					<h3>House at a glance</h3>
 
@@ -191,7 +191,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-	<script src="vue_house.js"></script>
+	<script src="js_json/vue_house.js"></script>
 </body>
 
 </html>
